# app/Http/Controllers/Web/Auth/LoginController.php
@@ -2,23 +2,31 @@
 
 namespace App\Http\Controllers\Web\Auth;
 
-use App\Http\Responses\Response as ResponseJson;
+// extends
+use App\Http\Controllers\Controller;
 
 // responses
+use App\Http\Responses\Response as ResponseJson;
 use Symfony\Component\HttpFoundation\Response;
 // Facades
 use Illuminate\Support\Facades\Hash;
 // Utils
 use App\Utils\JwtToken;
 //Models
-use App\DbModels\usuario;
-use App\Http\Controllers\Controller;
+// requests
 use App\Http\Requests\Web\Auth\LoginRequest;
 // resource
 use App\Http\Resources\Admin\Auth\LoginResource;
 
 
-
+/**
+ * Created by Ede Nunez
+ * 
+ * Modify by Joel Valdivia
+ * Date: 09 Jun 2020
+ * Description: Se modifica la ruta y se refactoriza el código
+ *              tambien se agrega el swagger en la parte final del archivo
+ */
 class LoginController extends Controller
 {
 
@@ -33,60 +41,25 @@ class LoginController extends Controller
      *
      * @return \Illuminate\Http\Response
      */
-
-    /**
-     * @OA\Post(
-     *     path="/web/auth/login",
-     *     tags={"Auth"},
-     *     summary="Login de usuario",
-     *     operationId="Login",
-     *     @OA\Response(
-     *         response=405,
-     *         description="Invalid input"
-     *     ),
-     *     @OA\RequestBody(
-     *         description="Input data format",
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema(
-     *                 type="object",
-     *                 @OA\Property(
-     *                     property="email",
-     *                     description="Updated name of the pet",
-     *                     type="string",
-     *                 ),
-     *                 @OA\Property(
-     *                     property="password",
-     *                     description="Updated status of the pet",
-     *                     type="string"
-     *                 )
-     *             )
-     *         )
-     *     )
-     * )
-     */
     public function __invoke(LoginRequest $request)
     {
 
         // Encuentra usuario de la base de datos
         // $user = usuario::where('email', $request->input('username'))->first();
         $user = null;
-        // verifica si el usuario existe con el status activo sino responde con error
 
         // se define la respuesta de error
         $result = $this->result->build($this->STATUS_ERROR, $this->NO_RESULT, $this->NO_TOTAL, $this->message);
+        // $result = $this->result->build($this->STATUS_OK, ['token' => 'bienpadre', 'nombre'=> 'Fulanito'], $this->NO_TOTAL, 'Sesion iniciada');
+        // return response()->json($result,  Response::HTTP_OK);
 
         // verifica si el usuario existe sino responde con error
         if (!$user)
             return response()->json($result,  Response::HTTP_UNAUTHORIZED);
 
-        // if (!$oUser)
-        //     return response()->json($this->oResponse->fnResult(false, $this->message, $this->message),  Response::HTTP_UNAUTHORIZED);
         // Verifica la contraseña y genera un token sino responde con error
         if (!Hash::check($request->input('password'), $user->password))
             return response()->json($result, Response::HTTP_UNAUTHORIZED);
-        // if (!Hash::check($oRequest->input('password'), $oUser->password))
-        //     return response()->json($this->oResponse->fnResult(false, $this->message, $this->message), Response::HTTP_UNAUTHORIZED);
 
         // Se actualiza la última vez que inició sesión el usuario
         $user->lastSession = date("Y-m-d H:i:s");
@@ -101,15 +74,96 @@ class LoginController extends Controller
         $this->message = 'Usuario ha iniciado sesión correctamente';
 
         // construye respuesta correcta
-        $respuesta = $this->respuesta->construir($this->STATUS_OK, $result, $this->NO_TOTAL, $this->message);
+        $result = $this->result->build($this->STATUS_OK, $result, $this->NO_TOTAL, $this->message);
 
         // response el resultado con su codigo Http
-        return response()->json($respuesta, Response::HTTP_OK);
-
-        // $oUser['token']  = JwtToken::create($oUser);
-        // // Resultado mappeado
-        // $oResult = new LoginResource($oUser);
-
-        // return response()->json($this->oResponse->fnResult(true, $oResult, "Success"), 200);
+        return response()->json($result, Response::HTTP_OK);
     }
+    /**
+     * @OA\Post(
+     *     path="/web/auth/login",
+     *     tags={"Auth"},
+     *     summary="Inicio de sesión de usuario",
+     *     operationId="Login",
+     *     @OA\Response(
+     *         response=200,
+     *         description="El usuario a iniciado sesión correctamente",
+     *         @OA\JsonContent(ref="#/components/schemas/LoginResponse")
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Usuario no fue autorizado",
+     *         @OA\JsonContent(ref="#/components/schemas/ErrorResponse")
+     *     ),
+     *     @OA\RequestBody(
+     *         description="Formato de envío de datos",
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="username",
+     *                     description="Nombre de usuario",
+     *                     type="string",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     description="Contraseña",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
+     */
+
+    /**
+     * @OA\Schema(
+     *   schema="LoginResponse",
+     *   @OA\Property(
+     *     property="status",
+     *     type="boolean"
+     *   ),
+     *   @OA\Property(
+     *     property="message",
+     *     type="string"
+     *   ),
+     *   @OA\Property(
+     *     property="data",
+     *     ref="#/components/schemas/LoginResponseData"
+     *   )
+     * )
+     */
+
+    /**
+     * @OA\Schema(
+     *   schema="LoginResponseData",
+     *   @OA\Property(
+     *     property="status",
+     *     type="boolean"
+     *   ),
+     *   @OA\Property(
+     *     property="message",
+     *     type="string"
+     *   ),
+     *   @OA\Property(
+     *     property="data",
+     *     type="boolean"
+     *   )
+     * )
+     */
+
+    /**
+     * @OA\Schema(
+     *   schema="ErrorResponse",
+     *   @OA\Property(
+     *     property="status",
+     *     type="boolean"
+     *   ),
+     *   @OA\Property(
+     *     property="message",
+     *     type="string"
+     *   )
+     * )
+     */
 }
